CSS : Reader fix z-indexes (and markup) for gradient shadow on .readerColumn and wordsBank + make word details scrollable (+ remove commented borders that were there for debug)

--- a/imports/ui/components/reader.css
+++ b/imports/ui/components/reader.css
@@ -109,15 +109,15 @@ ul::selection {
 	position: relative;
 	width: 100vw;
 	height: 100vh;
-	/* border: 4px solid red; */
 	box-sizing: border-box;
 }
 .readerColumnBG-bottom {
-	position: absolute;
+	position: fixed;
+  left: calc(50 / 1024 * 100vw);
+  pointer-events: none;
 	bottom: 0;
 	z-index: 2;
-	/* border: 4px solid orchid; */
-	width: 100%;
+	width: calc((100vw / 2) - (50 / 1024 * 100vw));
 	height: calc(100vh / 3);
 	box-sizing: border-box;
 	background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 100%);
@@ -129,7 +129,6 @@ ul::selection {
 	position: absolute;
 	left: calc(-24 / 1024 * 100vw);
 	width: calc(24 / 1024 * 100vw);
-	/* border: 4px solid aqua; */
 	height: 100%;
 	box-sizing: border-box;
 	background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 33%, rgba(0,0,0,1) 100%);
@@ -140,7 +139,6 @@ ul::selection {
 	position: absolute;
 	right: calc(-24 / 1024 * 100vw);
 	width: calc(24 / 1024 * 100vw);
-	/* border: 4px solid aquamarine; */
 	height: 100%;
 	box-sizing: border-box;
 	background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 66%, rgba(255,255,255,0) 100%);
@@ -149,7 +147,6 @@ ul::selection {
 .answersColumn {
 	font-size: calc(22 / 1024 * 100vw);
 	line-height: 1.2;
-	/* border: 4px solid blue; */
 	box-sizing: border-box;
 	width: calc(100vw / 2);
 	position: absolute;
@@ -185,7 +182,6 @@ ul::selection {
 	color: #FF0000;
 	text-decoration: none;
 	position: relative;
-	/* background: grey; */
 }
 .answersColumn a::before {
 	content: '';
@@ -197,8 +193,6 @@ ul::selection {
 	width: calc(30 / 600 * 100vh);
 	height: calc(20 / 600 * 100vh);
 	display: inline-block;
-	/* border: 2px solid red; */
-	/* background: green; */
 }
 
 .invertReadingDir {
