--- a/imports/ui/components/wordsBank.css
+++ b/imports/ui/components/wordsBank.css
@@ -12,7 +12,7 @@
   transform: translate3d(calc(-100%),0,0);
   transition: transform 0.8s ease-in-out;
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 2;
   background-color: #1B1464;
   flex: 1 1 auto;
   padding-bottom: calc(100 / 600 * 100vh);
@@ -135,6 +135,9 @@
   padding-right: 130px;
   flex-basis: auto;
   font-size: calc(22 / 1024 * 100vw);
+  overflow-y: scroll;
+	scrollbar-color: rgba(100, 100, 100, 0.5) transparent;
+	scrollbar-width: thin;
 }
 .wordTitle {
   font-family: 'Avara';
